9-loadbalancer.tf
resource "aws_lb" "brandon1_alb" {
  name               = "brandon1-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.brandon1-sg02-LB01.id]
  subnets            = [
    aws_subnet.public-ca-central-1a.id,
    aws_subnet.public-ca-central-1b.id,
    aws_subnet.public-ca-central-1d.id
  ]
  enable_deletion_protection = false

  tags = {
    Name    = "brandon1LoadBalancer"
    Service = "brandon1"
    Owner   = "User"
    Project = "Web Service"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.brandon1_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.brandon1_tg.arn
  }
}
